Set display of .middle to flex.  Set display of .middle-.middle to flex.  Fixed alignment of items to create cards

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    border: 1px solid red;
+    
 }
 
 
@@ -74,3 +74,34 @@ img {
     width: 150px;
 }
 
+.middle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 24px;
+}
+
+.middle-middle {
+    display: flex;
+    padding-top: 24px;
+    gap: 10px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.card img {
+    width: 325px;
+    height: 200px;
+    border-radius: 0.7rem;
+    gap: 10px;
+}
+
+.card-text {
+    width: 250px;
+    text-align: center;
+}
